Fix layout issues with textarea on mobile, I hope

--- a/src/components/Card/styles.css
+++ b/src/components/Card/styles.css
@@ -34,7 +34,9 @@
   resize: none;
   cursor: pointer;
   text-align: left;
-  height: 100%;
+  height: 76%;
+  padding: 0;
+  margin: 0;
   background-color: #05061a;
   color: #fefefe;
   font-size: 2em;
@@ -53,6 +55,7 @@
 
 .card__delete {
   position: absolute;
+  z-index: 10;
   bottom: 1.6em;
   left: 1.6em;
   display: flex;
